--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Authors@R: person("Alicia", "Brown", email = "aliciatb@gmail.com",
                   role = c("aut", "cre"))
 Description: What the package does (one paragraph).
 Depends: R (>= 3.3)
-License: GPL (>= 2)
+License: file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.0
