--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,6 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.0
 Imports: dplyr, readr, stringr
+Suggests: knitr,
+    rmarkdown
+VignetteBuilder: knitr
