--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,11 +2,15 @@
 
 export(eq_clean_data)
 export(eq_location_clean)
+export(geom_timeline)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,filter)
 importFrom(dplyr,select)
+importFrom(ggplot2,ggplot)
 importFrom(readr,parse_date)
 importFrom(readr,parse_double)
+importFrom(readr,parse_integer)
 importFrom(stringr,str_pad)
 importFrom(stringr,str_replace)
 importFrom(stringr,str_to_title)
+importFrom(stringr,str_to_upper)
