--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,5 +11,6 @@ LazyData: true
 RoxygenNote: 6.1.0
 Imports: dplyr, readr, stringr, ggplot2
 Suggests: knitr,
-    rmarkdown
+    rmarkdown,
+    testthat
 VignetteBuilder: knitr
