--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,15 @@
 
 export(eq_clean_data)
 export(eq_location_clean)
+export(eq_map)
 export(geom_timeline)
 export(geom_timeline_label)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,filter)
 importFrom(dplyr,select)
 importFrom(ggplot2,ggplot)
+importFrom(leaflet,addCircleMarkers)
+importFrom(leaflet,addTiles)
 importFrom(readr,parse_date)
 importFrom(readr,parse_double)
 importFrom(readr,parse_integer)
