--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ importFrom(leaflet,addTiles)
 importFrom(readr,parse_date)
 importFrom(readr,parse_double)
 importFrom(readr,parse_integer)
+importFrom(rlang,.data)
 importFrom(stringr,str_pad)
 importFrom(stringr,str_replace)
 importFrom(stringr,str_to_title)
